# tkconvertor

./: .gitignore  .pdm.toml  README.md  pyproject.toml
transform/: new.py  new2.py  new3.py  tk2ttk.py  tk2ttkbootstrap.py  utils.py
transform/init/: tk2ttk.py
