[project]
name = "tkconvertor"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayden", email = "2361018131@qq.com"},
]
dependencies = [
    "ttkbootstrap>=1.7.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
